database maker working, keep pushing to get the projects displaying correctly

--- a/Dynamic/franciscomatignon/src/app/app.component.html
+++ b/Dynamic/franciscomatignon/src/app/app.component.html
@@ -9,8 +9,8 @@
 <body>
   <app-header></app-header>
   <main>
-  <app-project class="project"></app-project>
+  <router-outlet></router-outlet>
   </main>
+  <app-footer></app-footer>
 </body>
 </html>
-<router-outlet></router-outlet>
