let's get the header working properly now and then the footer

--- a/Dynamic/franciscomatignon/src/app/header/header.component.html
+++ b/Dynamic/franciscomatignon/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <object id="logo" data="../../assets/FM LOGO SVG.svg" width="42"></object>
   <nav>
-    <a id="About" href="">About</a>
-    <a id="work" href="">Work</a>
+    <a id="About" href="/about">About</a>
+    <a id="work" href="/work">Work</a>
   </nav>
 </header>
