--- a/Dynamic/franciscomatignon/src/app/project/project.component.css
+++ b/Dynamic/franciscomatignon/src/app/project/project.component.css
@@ -3,3 +3,28 @@ app-project {
   padding: 0 !important;
   background-color: red;
 }
+img {
+  margin-bottom: 8px;
+}
+.project-text {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  margin-bottom: 16px;
+}
+a {
+  all: unset;
+  cursor: pointer;
+}
+a:hover > .project-text {
+  opacity: .4;
+  transition-property: all;
+  transition-duration: 200ms;
+  transition-timing-function: ease-in-out;
+}
+a:hover > img {
+  filter: brightness(0.4);
+  transition-property: all;
+  transition-duration: 200ms;
+  transition-timing-function: ease-in-out;
+}
