--- a/Dynamic/franciscomatignon/src/app/project/project.component.html
+++ b/Dynamic/franciscomatignon/src/app/project/project.component.html
@@ -1,1 +1,8 @@
-<p>{{project}}</p>
+<a href="/{{project.link}}">
+    <img src="{{project.images[0]}}" alt="" width="100%">
+    <div class="project-text">
+      <p>{{project.name}}</p>
+      <p>{{project.year}}</p>
+    </div>
+</a>
+
