--- a/Dynamic/franciscomatignon/src/styles.css
+++ b/Dynamic/franciscomatignon/src/styles.css
@@ -63,7 +63,7 @@ body {
   font-size: small ;
 }
 header {
-  margin: 16px 12px;
+  margin: 20px 12px 14px 12px;
   display: flex;
   height: 17px;
 }
@@ -76,10 +76,10 @@ nav {
 a {
   text-decoration: none;
   color: black;
-  opacity: 40%;
-}
-a:hover {
   opacity: 1;
+}
+a:hover{
+  opacity: .4;
 }
 
 nav a {
