--- a/Dynamic/franciscomatignon/src/app/header/header.component.html
+++ b/Dynamic/franciscomatignon/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<header>
+<header id="header">
   <object id="logo" data="../../assets/FM LOGO SVG.svg" width="42"></object>
   <nav>
-    <a id="About" href="/about">About</a>
-    <a id="work" href="/work">Work</a>
+    <a id="About" routerLinkActive="active" routerLink="about">About</a>
+    <a id="work" routerLinkActive="active" routerLink="work">Work</a>
   </nav>
 </header>
