--- a/Dynamic/franciscomatignon/src/styles.css
+++ b/Dynamic/franciscomatignon/src/styles.css
@@ -62,30 +62,14 @@ body {
   font-family: 'Public Sans', sans-serif;
   font-size: small ;
 }
-header {
-  margin: 20px 12px 14px 12px;
-  display: flex;
-  height: 17px;
-}
-nav {
-  width: 100%;
-  padding-top: 2px;
-  margin-right: 4px;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-  opacity: 1;
-}
-a:hover{
-  opacity: .4;
-}
-
-nav a {
-  float: right;
-  margin-left: 12px;
-}
 main {
   margin: 0px 12px;
+  min-height: calc(100vh - 3px - 44px - 64px);
+}
+a {
+	all: unset;
+	cursor: pointer;
+}
+a:hover {
+	opacity: .4;
 }
