--- a/Dynamic/franciscomatignon/src/app/footer/footer.component.html
+++ b/Dynamic/franciscomatignon/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer *ngIf="router.url != '/about'">
-  <p id="copy" >ⓒ Francisco Matignon, 2022.</p>
-  <p id="btt"> <a (click)="toTop()">Back to top</a>  </p>
+  <p>ⓒ Francisco Matignon, 2022.</p>
+  <p> <a (click)="toTop()">Back to top</a>  </p>
 </footer>
