--- a/Dynamic/franciscomatignon/src/app/header/header.component.html
+++ b/Dynamic/franciscomatignon/src/app/header/header.component.html
@@ -1,7 +1,9 @@
-<header id="header">
-  <object id="logo" data="../../assets/FM LOGO SVG.svg" width="42"></object>
+<header>
+  <a routerLink="work" routerLinkActive="non-clickable">
+    <object data="../../assets/FM LOGO SVG.svg"></object>
+  </a>
   <nav>
-    <a id="About" routerLinkActive="active" routerLink="about">About</a>
-    <a id="work" routerLinkActive="active" routerLink="work">Work</a>
+    <a routerLinkActive="active" routerLink="about">About</a>
+    <a routerLinkActive="active" routerLink="work">Work</a>
   </nav>
 </header>
