--- a/Dynamic/franciscomatignon/src/app/about/about.component.html
+++ b/Dynamic/franciscomatignon/src/app/about/about.component.html
@@ -1,7 +1,7 @@
-<div id="main-wrapper">
+<div id="about">
   <img src="../../assets/IMG_0933.jpg" width="164px" alt="">
   <p>
-    I´m Francisco, an architecture student based in La Plata, Argentina. I'm passionate about bringing unbuilt spaces to life through visualization.
+    Im Francisco, an architecture student based in La Plata, Argentina. I'm passionate about bringing unbuilt spaces to life through visualization.
     <br>
     Let's get in touch!
     <br><br>
@@ -10,7 +10,7 @@
   <a href="https://instagram.com/franciscomatignon">@franciscomatignon</a>
   <br><br>
   <a href="mailto:hello@franciscomatignon.com">hello@franciscomatignon.com</a>
-  <p id="footer"><br><br>
+  <p><br><br>
     This website was designed and developed by me.
     <br>
     All rights reserved.
