--- a/Dynamic/franciscomatignon/src/app/header/header.component.css
+++ b/Dynamic/franciscomatignon/src/app/header/header.component.css
@@ -3,26 +3,37 @@ header {
   display: flex;
   height: 17px;
   font-size: medium;
+  align-items: flex-end;
 }
+
 nav {
   width: 100%;
   padding-top: 2px;
-  margin-right: 4px;
 }
-
-a {
-  text-decoration: none;
-  color: black;
-  opacity: 1;
-}
-a:hover{
-  opacity: .4;
-}
-
 nav a {
   float: right;
   margin-left: 12px;
 }
 .active {
   opacity: .4;
+}
+object {
+  width: 42px;
+  pointer-events: none;
+}
+.non-clickable {
+  pointer-events: none;
+}
+
+/* Tablet*/
+@media (min-width: 768px){
+	header {
+    font-size: large;
+    height: 34px;
+    margin-right: 16px;
+    margin-left: 16px;
+  }
+  object {
+    width: 64px;
+  }
 }
