--- a/Dynamic/franciscomatignon/src/app/project/project.component.css
+++ b/Dynamic/franciscomatignon/src/app/project/project.component.css
@@ -6,25 +6,17 @@ app-project {
 img {
   margin-bottom: 8px;
 }
-.project-text {
+div {
   display: flex;
   justify-content: space-between;
-  font-size: 12px;
   margin-bottom: 16px;
 }
-a {
-  all: unset;
+article:hover {
   cursor: pointer;
 }
-article:hover > .project-text {
+article:hover > div {
   opacity: .4;
-  transition-property: all;
-  transition-duration: 200ms;
-  transition-timing-function: ease-in-out;
 }
-article:hover > a > img {
+article:hover > img {
   filter: brightness(0.4);
-  transition-property: all;
-  transition-duration: 200ms;
-  transition-timing-function: ease-in-out;
 }
