--- a/Dynamic/franciscomatignon/src/app/work/work.component.html
+++ b/Dynamic/franciscomatignon/src/app/work/work.component.html
@@ -1,1 +1,3 @@
-<app-project [project]="project" *ngFor="let project of projects"></app-project>
+<div id="projects-wrapper">
+  <app-project [project]="project" *ngFor="let project of projects" class="project"></app-project>
+</div>
