--- a/Dynamic/franciscomatignon/src/app/about/about.component.html
+++ b/Dynamic/franciscomatignon/src/app/about/about.component.html
@@ -1,19 +1,21 @@
 <div id="about">
-  <img src="../../assets/IMG_0933.jpg" width="164px" alt="">
-  <p>
-    Im Francisco, an architecture student based in La Plata, Argentina. I'm passionate about bringing unbuilt spaces to life through visualization.
-    <br>
-    Let's get in touch!
+  <img src="../../assets/IMG_0933.jpg">
+  <div id="about-text">
+    <p>
+      Im Francisco, an architecture student based in La Plata, Argentina. I'm passionate about bringing unbuilt spaces to life through visualization.
+      <br>
+      Let's get in touch!
+      <br><br>
+      +54 9 221 436 2935
+    </p><br>
+    <a href="https://instagram.com/franciscomatignon">@franciscomatignon</a>
     <br><br>
-    +54 9 221 436 2935
-  </p><br>
-  <a href="https://instagram.com/franciscomatignon">@franciscomatignon</a>
-  <br><br>
-  <a href="mailto:hello@franciscomatignon.com">hello@franciscomatignon.com</a>
-  <p><br><br>
-    This website was designed and developed by me.
-    <br>
-    All rights reserved.
-  </p>
+    <a href="mailto:hello@franciscomatignon.com">hello@franciscomatignon.com</a>
+    <p><br><br>
+      This website was designed and developed by me.
+      <br>
+      All rights reserved.
+    </p>
+  </div>
 </div>
 
