--- a/Dynamic/franciscomatignon/src/app/footer/footer.component.html
+++ b/Dynamic/franciscomatignon/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer *ngIf="router.url != '/about'">
-  <p>ⓒ Francisco Matignon, 2022.</p>
-  <p> <a (click)="toTop()">Back to top</a>  </p>
+  <p id="copy">ⓒ Francisco Matignon, 2022.</p>
+  <p id="btt" *ngIf="mobile || ((router.url == '/work' || ''))"> <a (click)="toTop()">Back to top</a>  </p>
 </footer>
