--- a/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.html
+++ b/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.html
@@ -1,4 +1,4 @@
-<article>
+<article class="mobile-tablet" *ngIf="mobile || tablet">
   <div id="main-textbox">
     <div id="project-textbox">
       <div class="text-box">
@@ -22,5 +22,48 @@
       {{activeProject.text}}
     </p>
   </div>
-  <img *ngFor="let image of activeProject.images; index as i" src="{{activeProject.images[i]}}" width="100%">
+  <div *ngIf="mobile">
+    <img *ngFor="let image of activeProject.images; index as i" src="{{activeProject.images[i]}}" width="100%">
+  </div>
+  <div class="tablet-container" *ngIf="tablet">
+    <div *ngIf="activeProject.images.length > 1" class="change-image" (click)="previousImage()">
+      <object data="../../assets/angle-left.svg" ></object>
+    </div>
+    <img src="{{activeImage}}" (click)="nextImage()" width="100%">
+    <div class="change-image" *ngIf="activeProject.images.length > 1" (click)="nextImage()">
+      <object data="../../assets/angle-right.svg" ></object>
+    </div>
+  </div>
+</article>
+<article class="desktop" *ngIf="desktop">
+  <div id="main-textbox">
+    <div id="project-textbox">
+      <div class="text-box">
+        <p>{{activeProject.name}}</p>
+        <p>
+          <span *ngFor="let client of activeProject.clients; index as i">
+            <a *ngIf="activeProject.clients[i].link; else noLink" href="https://{{activeProject.clients[i].link}}">
+              {{activeProject.clients[i].name}}
+            </a>
+            <span *ngIf="activeProject.clients.length >1 && i != activeProject.clients.length - 1"> / </span>
+            <ng-template #noLink>{{activeProject.clients[i].name}}</ng-template>
+          </span>
+        </p>
+        <p>{{activeProject.location.city}}, {{activeProject.location.country}}</p>
+
+      </div>
+    </div>
+    <p *ngIf="activeProject.text" id="project-description">
+      {{activeProject.text}}
+    </p>
+    <div id="previous-image" *ngIf="activeProject.images.length > 1" class="change-image" (click)="previousImage()">
+      <object data="../../assets/angle-left.svg" ></object>
+    </div>
+  </div>
+  <div class="desktop-container" *ngIf="desktop">
+    <img src="{{activeImage}}" (click)="nextImage()" width="100%">
+    <div class="change-image" *ngIf="activeProject.images.length > 1" (click)="nextImage()">
+      <object data="../../assets/angle-right.svg" ></object>
+    </div>
+  </div>
 </article>
