--- a/Dynamic/franciscomatignon/src/app/footer/footer.component.css
+++ b/Dynamic/franciscomatignon/src/app/footer/footer.component.css
@@ -21,4 +21,20 @@ footer{
   p:first-child {
     margin-bottom: 16px;
   }
+  .center {
+    text-align: center;
+  }
+}
+/* Desktop */
+@media (min-width: 1200px){
+	footer {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+  .second-column {
+    grid-column: 2;
+  }
+  .margin-top {
+    margin-top: 24px;
+  }
 }
