--- a/Dynamic/franciscomatignon/src/app/footer/footer.component.html
+++ b/Dynamic/franciscomatignon/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer *ngIf="router.url != '/about'">
-  <p id="copy">ⓒ Francisco Matignon, 2022.</p>
-  <p id="btt" *ngIf="mobile || ((router.url == '/work' || ''))"> <a (click)="toTop()">Back to top</a>  </p>
+  <p [ngClass]="{'center':tablet && router.url != ('/work' || ''), 'second-column': router.url!= ('/work' || '')}" id="copy">ⓒ Francisco Matignon, 2022.</p>
+  <p id="btt" [ngClass]="{'margin-top':desktop}" *ngIf="mobile || ((router.url == '/work' || ''))"> <a (click)="toTop()">Back to top</a>  </p>
 </footer>
