--- a/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.html
+++ b/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.html
@@ -56,13 +56,13 @@
     <p *ngIf="activeProject.text" id="project-description">
       {{activeProject.text}}
     </p>
-        <div [ngClass]="{'full-opacity-2': this.imageCounter == 0 }" id="previous-image" *ngIf="activeProject.images.length > 1" class="change-image" (click)="previousImage()">
+        <div [ngClass]="{'full-opacity-2': !firstProject && this.imageCounter == 0, 'hidden': firstProject && this.imageCounter == 0}" id="previous-image" class="change-image" (click)="previousImage()">
       <object data="../../assets/angle-left.svg" ></object>
     </div>
   </div>
   <div class="desktop-container" *ngIf="desktop">
     <img src="{{activeImage}}" (click)="nextImage()" width="100%">
-    <div [ngClass]="{'full-opacity': this.imageCounter == this.activeProject.images.length - 1 }" class="change-image" *ngIf="activeProject.images.length > 1" (click)="nextImage()">
+    <div [ngClass]="{'full-opacity': !lastProject && this.imageCounter == this.activeProject.images.length - 1, 'hidden': lastProject && this.imageCounter == this.activeProject.images.length - 1}" class="change-image"  (click)="nextImage()">
       <object data="../../assets/angle-right.svg" ></object>
     </div>
   </div>
