alright, looks functional. get learning blender

--- a/Dynamic/franciscomatignon/src/app/no-page/no-page.component.html
+++ b/Dynamic/franciscomatignon/src/app/no-page/no-page.component.html
@@ -1,2 +1,4 @@
-<p>404 - Nothing here</p>
-<a routerLink = ''> Back to homepage</a>
+<div>
+  <p>404 - Nothing here</p>
+  <a routerLink = ''> Back to homepage</a>
+</div>
