--- a/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.css
+++ b/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.css
@@ -49,7 +49,14 @@ img:last-child {
     flex-direction: row;
     justify-content: space-between;
     overflow: hidden;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
   }
+#tabletcounter {
+  text-align: center;
+}
   img {
     max-height: 100%;
     width: auto;
@@ -79,12 +86,8 @@ img:last-child {
   .full-opacity {
     opacity: 1;
   }
-  .full-opacity-2 {
-    opacity: 1;
-  }
-  .full-opacity:hover, .full-opacity-2:hover {
-    opacity: 1;
-    background-color: rgba(0,0,0,.065) ;
+  .full-opacity:hover {
+    opacity: .05;
   }
 }
 
@@ -97,13 +100,25 @@ img:last-child {
     grid-column-gap: 24px;
     padding-bottom: 10px;
   }
+
   #main-textbox {
     grid-column: 1;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     text-align: right;
-    align-self: flex-end;
+    justify-content: flex-end;
     margin: 0;
     position: relative;
+  }
+  #counter {
+    text-align: right;
+    font-size: small;
+    grid-column: 1;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin-top: 2rem;
   }
   #project-textbox {
     display: block;
@@ -136,10 +151,10 @@ img:last-child {
   }
   #previous-image {
     position:absolute;
-    right: -20px;
+    right: -14px;
     bottom: 0px;
     height: calc(100vh - 76px - 90px);
-    width: 80px;
+    width: 40px;
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
