--- a/Dynamic/franciscomatignon/src/app/header/header.component.html
+++ b/Dynamic/franciscomatignon/src/app/header/header.component.html
@@ -1,9 +1,10 @@
 <header>
-  <a routerLink="work" routerLinkActive="non-clickable">
-    <object data="../../assets/FM LOGO SVG.svg"></object>
-  </a>
+    <a routerLink="work" routerLinkActive="non-clickable">
+      <object data="../../assets/Asset 6.svg"></object>
+    </a>  
   <nav>
-    <a routerLinkActive="active" routerLink="about">About</a>
     <a routerLinkActive="active" routerLink="work">Work</a>
+    <a routerLinkActive="active" routerLink="about">About</a>
+    <a href="https://www.instagram.com/arenderingstudio"><fa-icon [icon]="['fab', 'instagram']"size="lg"></fa-icon></a>
   </nav>
 </header>
