--- a/Dynamic/franciscomatignon/src/app/work/work.component.html
+++ b/Dynamic/franciscomatignon/src/app/work/work.component.html
@@ -1,3 +1,6 @@
+<div id="hero-wrapper">
+  <img [src]="coverImage" alt="">
+</div>
 <div id="projects-wrapper">
   <app-project [project]="project" *ngFor="let project of projects | slice:1" class="project"></app-project>
 </div>
