--- a/Dynamic/franciscomatignon/src/app/footer/footer.component.css
+++ b/Dynamic/franciscomatignon/src/app/footer/footer.component.css
@@ -1,13 +1,15 @@
 footer{
-  margin: 16px 12px 0px 12px;
-  height: 46px;
+  margin: 0px 12px;
+  height: 40px;
   font-size: smaller;
 }
 #copy {
-  margin-bottom: 12px;
+  text-align: center;
+  font-size: x-small;
 }
 #btt {
   text-align: center;
+  margin-bottom: 10px;
 }
 
 /* Tablet*/
@@ -15,26 +17,11 @@ footer{
 	footer {
     margin-right: 16px;
     margin-left: 16px;
-    font-size: medium;
-    height:72px;
-  }
-  p:first-child {
-    margin-bottom: 16px;
-  }
-  .center {
-    text-align: center;
+    font-size: small;
+    height: 50px;
   }
 }
 /* Desktop */
 @media (min-width: 1200px){
-	footer {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-  }
-  .second-column {
-    grid-column: 2;
-  }
-  .margin-top {
-    margin-top: 24px;
-  }
+
 }
