--- a/Dynamic/franciscomatignon/src/app/project/project.component.css
+++ b/Dynamic/franciscomatignon/src/app/project/project.component.css
@@ -5,7 +5,7 @@ app-project {
 }
 img {
   margin-bottom: 8px;
-  aspect-ratio: 4/5;
+  aspect-ratio: 1;
   object-fit: cover;
 }
 div {
@@ -36,7 +36,7 @@ article:hover > img {
 /* Desktop*/
 @media (min-width: 1200px){
   img {
-    aspect-ratio: 3/4;
+    aspect-ratio: .85;
   }
   div {
     margin-bottom: 20px;
