--- a/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.css
+++ b/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.css
@@ -31,6 +31,7 @@ img:last-child {
   display: flex;
   justify-content: space-between;
   margin-top: 12px;
+  font-size: medium;
 }
 .hidden {
   visibility: hidden;
@@ -131,7 +132,9 @@ img:last-child {
   }
 
   .desktop-container {
+    display: -webkit-flex;
     display: flex;
+    -webkit-justify-content: space-between;
     justify-content: space-between;
     grid-column: 2 / span 3;
     margin: 0;
@@ -144,8 +147,8 @@ img:last-child {
   }
   img {
     max-height: auto;
-    max-width: auto;
-    object-fit: fill;
+    width: min-content;
+    object-fit: contain;
     margin: 0;
     align-self: flex-end;
   }
