--- a/Dynamic/franciscomatignon/src/app/work/work.component.html
+++ b/Dynamic/franciscomatignon/src/app/work/work.component.html
@@ -1,44 +1,42 @@
 <!-- MOBILE CAROUSEL -->
-<div id="hero-wrapper">
-  <ngb-carousel *ngIf="mobile"[showNavigationArrows]='showNavigationArrows' [showNavigationIndicators]='showNavigationIndicators' [animation]="animation">
-    <ng-template ngbSlide>
+<div *ngIf="mobile" id="hero-wrapper">
+  <ngb-carousel [showNavigationArrows]='showNavigationArrows' [showNavigationIndicators]='showNavigationIndicators' [animation]="animation">
+    <ng-template *ngFor="let mobileCover of mobileCovers" ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src='../../assets/Covers/Mobile/0.jpg' alt="" />
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img src='../../assets/Covers/Mobile/1.jpg' alt="" />
+        <img [src]='"../../assets/Covers/Mobile/" + mobileCover' alt="" />
       </div>
     </ng-template>
   </ngb-carousel>
 </div>
-
 <!-- TABLET CAROUSEL -->
-<div id="hero-wrapper">
-  <ngb-carousel *ngIf="tablet" [showNavigationArrows]='showNavigationArrows' [showNavigationIndicators]='showNavigationIndicators' [animation]="animation">
-    
-    <ng-template ngbSlide>
+<div *ngIf="tablet" id="hero-wrapper">
+  <ngb-carousel [showNavigationArrows]='showNavigationArrows' [showNavigationIndicators]='showNavigationIndicators' [animation]="animation">
+    <ng-template *ngFor="let tabletCover of tabletCovers" ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src='../../assets/Covers/Tablet/0.jpg' alt="" />
+        <img [src]='"../../assets/Covers/Tablet/" + tabletCover' alt="" />
       </div>
     </ng-template>
-
   </ngb-carousel>
 </div>
-
 <!-- DESKTOP CAROUSEL -->
-<div id="hero-wrapper">
-  <ngb-carousel *ngIf="desktop" [showNavigationArrows]='showNavigationArrows' [showNavigationIndicators]='showNavigationIndicators' [animation]="animation">
-
-    <ng-template ngbSlide>
+<div *ngIf="desktop" id="hero-wrapper">
+  <ngb-carousel [showNavigationArrows]='showNavigationArrows' [showNavigationIndicators]='showNavigationIndicators' [animation]="animation">
+    <ng-template *ngFor="let desktopCover of desktopCovers" ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src='../../assets/Covers/Desktop/0.jpg' alt="" />
+        <img [src]='"../../assets/Covers/Desktop/" + desktopCover' alt="" />
       </div>
     </ng-template>
-    
   </ngb-carousel>
 </div>
+<!-- PROJECTS-->
 <div id="projects-wrapper">
-  <app-project [project]="project" *ngFor="let project of projects | slice:1" class="project"></app-project>
+  <app-project [project]="project" *ngFor="let project of projects | slice: 1 | reverse" class="project"></app-project>
+</div>
+
+<!-- CTA -->
+<div id="cta">
+  <p>Let's bring your projects to life.</p>
+  <button>
+    CONTACT
+  </button>
 </div>
