--- a/Dynamic/franciscomatignon/src/app/project/project.component.css
+++ b/Dynamic/franciscomatignon/src/app/project/project.component.css
@@ -4,28 +4,60 @@ app-project {
   background-color: red;
 }
 img {
-  margin-bottom: 8px;
   aspect-ratio: 1;
   object-fit: cover;
 }
 div {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 16px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 99.4%;
+  width: 100%;
+  opacity: 0;
+  transition: .25s ease-in-out;
+  background-color: gainsboro;
+}
+article {
+  position: relative;
+  margin-bottom: 8px;
 }
 article:hover {
   cursor: pointer;
 }
-article:hover > div {
-  opacity: .4;
+article:hover div {
+  opacity: .9;
 }
 article:hover > img {
-  filter: brightness(0.4);
+  filter: brightness(1.2) ;
 }
-
+p {
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.self-made-modal {
+  max-width: 95vw;
+  max-height: 95vh;
+  aspect-ratio: auto;
+  height: auto;
+  z-index: 2;
+}
+#modal-box {
+  z-index: -1;
+  height: auto;
+  position: relative;
+}
 /* Tablet*/
 @media (min-width: 768px){
-  img {
+  .project-cover {
     aspect-ratio: 1;
   }
   div {
@@ -35,7 +67,7 @@ article:hover > img {
 
 /* Desktop*/
 @media (min-width: 1200px){
-  img {
+  .project-cover{
     aspect-ratio: .85;
   }
   div {
