--- a/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.html
+++ b/Dynamic/franciscomatignon/src/app/projectdetails/projectdetails.component.html
@@ -1,34 +1,27 @@
-<article class="mobile-tablet" *ngIf="mobile || tablet">
-  <div id="main-textbox">
-    <div id="project-textbox">
-      <div class="text-box">
-        <p>{{activeProject.name}}</p>
-        <p>
-          <span *ngFor="let client of activeProject.clients; index as i">
-            <a *ngIf="activeProject.clients[i].link; else noLink" href="https://{{activeProject.clients[i].link}}">
-              {{activeProject.clients[i].name}}
-            </a>
-            <span *ngIf="activeProject.clients.length >1 && i != activeProject.clients.length - 1"> / </span>
-            <ng-template #noLink>{{activeProject.clients[i].name}}</ng-template>
-          </span>
-        </p>
-      </div>
-      <div class="text-box">
-        <p>{{activeProject.year}}</p>
-        <p>{{activeProject.location.city}}, {{activeProject.location.country}}</p>
-      </div>
-    </div>
-    <p *ngIf="activeProject.text" id="project-description">
-      {{activeProject.text}}
-    </p>
+<article class="mobile-tablet">
+
+  <div>    
+    <!-- Primera imagen -->
+    <img class="cover" [src]="activeProject.cover" alt="" width="100%">
+    <!-- Titulo -->
+    <p id="project-title">{{activeProject.name}} 
+      <span *ngIf="activeProject.clients[0].name"> for 
+        <span class="client" *ngFor="let client of activeProject.clients">
+          <a *ngIf="client.link != ''; else noLink" [href]="client.link != '' ? client.link : ''">{{client.name}}</a>
+          <ng-template #noLink>{{client.name}}</ng-template>
+        </span>
+      </span></p>
+    <!-- Imagenes -->
+    <img *ngFor="let image of activeProject.images; index as a" [src]="activeProject.images[a]" width="100%">
+    <p>{{activeProject.images | slice: 8}}</p>
   </div>
-  <div *ngIf="mobile">
-    <img *ngFor="let image of activeProject.images; index as i" src="{{activeProject.images[i]}}" width="100%">
-  </div>
-  <div *ngIf="mobile" id="previous-next-project">
+  <!-- Previows-next -->
+  <div id="previous-next-project">
     <a [ngClass]="{'hidden': firstProject}" (click)="this.previousProject()">Previous</a>
     <a [ngClass]="{'hidden': lastProject}" (click)="this.nextProject()">Next</a>
   </div>
+<!--
+
   <div class="tablet-container" *ngIf="tablet">
     <div class="change-image" [ngClass]="{'full-opacity': !firstProject && this.imageCounter == 0, 'hidden': firstProject && this.imageCounter == 0}" (click)="previousImage()">
       <object data="../../assets/angle-left.svg" ></object>
@@ -40,7 +33,11 @@
   </div>
   <p id="tabletcounter" *ngIf="tablet">{{imageCounter + 1}} / {{this.activeProject.images.length}}</p>
 </article>
-<article class="desktop" *ngIf="desktop">
+
+
+
+
+  <article class="desktop" *ngIf="desktop">
   <div id="main-textbox">
     <p id="counter" >{{imageCounter + 1}} / {{this.activeProject.images.length}}</p>
     <div id="project-textbox">
@@ -73,3 +70,4 @@
     </div>
   </div>
 </article>
+-->
