--- a/Dynamic/franciscomatignon/src/styles.css
+++ b/Dynamic/franciscomatignon/src/styles.css
@@ -81,6 +81,54 @@ a:hover {
 	transition-duration: 200ms;
 	transition-timing-function: ease-in-out;
 }
+.d-block.modal.fade.show {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+.modal-dialog {
+	width: auto;
+	height: auto;
+	margin: auto;
+	padding: 0;
+}
+.modal-content {
+	margin: auto;
+	padding: 0;
+	width: auto;
+	height: auto;
+	overflow: hidden;
+	align-items: center;
+	border-color: transparent;
+	align-self: center;
+	margin-top: 2.5vh;
+	display: block;
+}
+.d-block {
+	display: block;
+}
+.fade {
+  transition: opacity 0.15s linear;
+}
+.fade:not(.show) {
+  opacity: 0;
+}
+/* MODAL */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Tablet*/
